# rest-api

./: .env  .env.example  .gitignore  Makefile  README-Update.md  README-temporary.md  README.md  config.py  config_bak.py  environment.yml  exactjson_withoutAPI.py  load_to_chroma.py  load_to_zilliz.py  logger_config.py  main.py  main2.py  main_bak.py  main_chroma.py  prompt.py  pytest.ini  requirements.txt  server.py  test_logging.py
codex-main/: .bazelignore  .bazelrc  .codespellignore  .codespellrc  .gitignore  .markdownlint-cli2.yaml  .npmrc  .prettierignore  .prettierrc.toml  AGENTS.md  BUILD.bazel  CHANGELOG.md  MODULE.bazel  NOTICE  README.md  SECURITY.md  announcement_tip.toml  cliff.toml  defs.bzl  flake.nix  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rbe.bzl  workspace_root_test_launcher.bat.tpl  workspace_root_test_launcher.sh.tpl
codex-main/.devcontainer/: Dockerfile  Dockerfile.secure  README.md  devcontainer.json  devcontainer.secure.json  init-firewall.sh  post-start.sh  post_install.py
codex-main/.github/: CODEOWNERS  blob-size-allowlist.txt  dependabot.yaml  dotslash-argument-comment-lint-config.json  dotslash-config.json  dotslash-zsh-config.json  pull_request_template.md
codex-main/.github/ISSUE_TEMPLATE/: 1-codex-app.yml  2-extension.yml  3-cli.yml  4-bug-report.yml  5-feature-request.yml  6-docs-issue.yml
codex-main/.github/scripts/: build-zsh-release-artifact.sh  install-musl-build-tools.sh  run-argument-comment-lint-bazel.sh  run-bazel-ci.sh  rusty_v8_bazel.py  rusty_v8_module_bazel.py  test_rusty_v8_bazel.py  verify_bazel_clippy_lints.py  verify_cargo_workspace_manifests.py  verify_tui_core_boundary.py
codex-main/.github/workflows/: Dockerfile.bazel  README.md  bazel.yml  blob-size-policy.yml  cargo-deny.yml  ci.yml  cla.yml  close-stale-contributor-prs.yml  codespell.yml  issue-deduplicator.yml  issue-labeler.yml  rust-ci-full.yml  rust-ci.yml  rust-release-argument-comment-lint.yml  rust-release-prepare.yml  rust-release-windows.yml  rust-release-zsh.yml  rust-release.yml  rusty-v8-release.yml  sdk.yml  v8-canary.yml  zstd
codex-main/codex-cli/: Dockerfile  package.json
codex-main/codex-cli/scripts/: README.md  build_container.sh  build_npm_package.py  init_firewall.sh  install_native_deps.py  run_in_container.sh
codex-main/codex-rs/: .gitignore  BUILD.bazel  Cargo.toml  README.md  clippy.toml  config.md  default.nix  deny.toml
codex-main/codex-rs/.cargo/: audit.toml  config.toml
codex-main/codex-rs/.config/: nextest.toml
codex-main/codex-rs/analytics/: BUILD.bazel  Cargo.toml
codex-main/codex-rs/ansi-escape/: BUILD.bazel  Cargo.toml
codex-main/codex-rs/app-server/: BUILD.bazel  Cargo.toml  README.md
codex-main/codex-rs/app-server-client/: BUILD.bazel  Cargo.toml  README.md
codex-main/codex-rs/app-server-protocol/: BUILD.bazel  Cargo.toml
codex-main/codex-rs/app-server-test-client/: BUILD.bazel  Cargo.toml  README.md
codex-main/codex-rs/apply-patch/: BUILD.bazel  Cargo.toml
codex-main/codex-rs/arg0/: BUILD.bazel  Cargo.toml
codex-main/codex-rs/async-utils/: BUILD.bazel  Cargo.toml
codex-main/codex-rs/backend-client/: BUILD.bazel  Cargo.toml
codex-main/codex-rs/chatgpt/: BUILD.bazel  Cargo.toml
codex-main/codex-rs/cli/: BUILD.bazel  Cargo.toml  build.rs
codex-main/codex-rs/cloud-requirements/: BUILD.bazel  Cargo.toml
codex-main/codex-rs/cloud-tasks/: BUILD.bazel  Cargo.toml
codex-main/codex-rs/cloud-tasks-client/: BUILD.bazel  Cargo.toml
codex-main/codex-rs/cloud-tasks-mock-client/: BUILD.bazel  Cargo.toml
codex-main/codex-rs/code-mode/: BUILD.bazel  Cargo.toml
codex-main/codex-rs/codex-api/: BUILD.bazel  Cargo.toml  README.md
codex-main/codex-rs/codex-backend-openapi-models/: BUILD.bazel  Cargo.toml
codex-main/codex-rs/codex-client/: BUILD.bazel  Cargo.toml  README.md
codex-main/codex-rs/codex-experimental-api-macros/: BUILD.bazel  Cargo.toml
codex-main/codex-rs/codex-mcp/: BUILD.bazel  Cargo.toml
codex-main/codex-rs/collaboration-mode-templates/: BUILD.bazel  Cargo.toml
codex-main/codex-rs/config/: BUILD.bazel  Cargo.toml
codex-main/codex-rs/connectors/: BUILD.bazel  Cargo.toml
codex-main/codex-rs/core-plugins/: BUILD.bazel  Cargo.toml
codex-main/codex-rs/core-skills/: Cargo.toml  (+1 more)
codex-main/docs/: CLA.md  agents_md.md  authentication.md  config.md  contributing.md  example-config.md  exec.md  execpolicy.md  exit-confirmation-prompt-design.md  getting-started.md  install.md  js_repl.md  license.md  open-source-fund.md  sandbox.md  skills.md  slash_commands.md  tui-alternate-screen.md  tui-chat-composer.md  tui-request-user-input.md  tui-stream-chunking-review.md  tui-stream-chunking-tuning.md  tui-stream-chunking-validation.md
codex-main/patches/: BUILD.bazel  abseil_windows_gnullvm_thread_identity.patch  aws-lc-sys_memcmp_check.patch  aws-lc-sys_windows_msvc_memcmp_probe.patch  aws-lc-sys_windows_msvc_prebuilt_nasm.patch  bzip2_windows_stack_args.patch  llvm_windows_symlink_extract.patch  ring_windows_msvc_include_dirs.patch  rules_rs_windows_exec_linker.patch  rules_rs_windows_gnullvm_exec.patch  rules_rust_windows_bootstrap_process_wrapper_linker.patch  rules_rust_windows_build_script_runner_paths.patch  rules_rust_windows_exec_bin_target.patch  rules_rust_windows_exec_msvc_build_script_env.patch  rules_rust_windows_exec_rustc_dev_rlib.patch  rules_rust_windows_exec_std.patch  rules_rust_windows_gnullvm_build_script.patch  rules_rust_windows_msvc_direct_link_args.patch  rules_rust_windows_process_wrapper_skip_temp_outputs.patch  rusty_v8_prebuilt_out_dir.patch  v8_bazel_rules.patch  v8_module_deps.patch  v8_source_portability.patch  webrtc-sys_hermetic_darwin_sysroot.patch  windows-link.patch  xz_windows_stack_args.patch  zstd-sys_windows_msvc_include_dirs.patch
codex-main/scripts/: asciicheck.py  check-module-bazel-lock.sh  check_blob_size.py  debug-codex.sh  list-bazel-clippy-targets.sh  list-bazel-release-targets.sh  mock_responses_websocket_server.py  readme_toc.py  run_tui_with_exec_server.sh  stage_npm_packages.py  start-codex-exec.sh  test-remote-env.sh
(+2992 files in other folders)
