
[package]
edition.workspace = true
license.workspace = true
name = "codex-cloud-tasks-mock-client"
version.workspace = true

[lib]
name = "codex_cloud_tasks_mock_client"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
codex-cloud-tasks-client = { workspace = true }
diffy = { workspace = true }
