[package]
name = "codex-backend-openapi-models"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_backend_openapi_models"
path = "src/lib.rs"

[lints]
workspace = true

# Important: generated code often violates our workspace lints.
# Allow unwrap/expect in this crate so the workspace builds cleanly
# after models are regenerated.
# Lint overrides are applied in src/lib.rs via crate attributes

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"

[package.metadata.cargo-shear]
ignored = ["serde_with"]
