load("//:defs.bzl", "codex_rust_crate")

codex_rust_crate(
    name = "core-plugins",
    crate_name = "codex_core_plugins",
    compile_data = glob(
        include = ["**"],
        exclude = [
            "**/* *",
            "BUILD.bazel",
            "Cargo.toml",
        ],
        allow_empty = True,
    ),
)
