load("//:defs.bzl", "codex_rust_crate")

codex_rust_crate(
    name = "core-skills",
    crate_name = "codex_core_skills",
    compile_data = glob(
        include = ["**"],
        exclude = [
            "**/* *",
            "BUILD.bazel",
            "Cargo.toml",
        ],
        allow_empty = True,
    ),
)
